# vzglyd-sidecar

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
src/: channel.rs  dns.rs  host_request.rs  http.rs  lib.rs  poll.rs  socket.rs  tls.rs
